# test_ci_cd_windows_qt

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-single-platform.yml
